Setup - Base styles for each component

--- a/src/styles/modules/variables.scss
+++ b/src/styles/modules/variables.scss
@@ -1,1 +1,20 @@
-$primary: black;
+// Primary
+$primary:  #FFF200;
+
+// Texts
+$text-color: #ffffff;
+$text-color--accent: #9D9E9F;
+
+// Layout
+$background-color:#000000;
+$border-color: #434343;
+
+// UI events
+$success: #2AC769;
+$warning: #F6A609;
+$error: #FB4E4E;
+
+// Timings
+$time: 0.2s;
+$time--medium: 0.3s;
+$time--long: 0.6s;
