--- a/src/styles/modules/layout.scss
+++ b/src/styles/modules/layout.scss
@@ -1,5 +1,5 @@
 * { box-sizing: border-box; }
-body { overflow-x: hidden; }
+body { overflow-x: hidden; background-color: $background-color; }
 img { max-width: 100%; height: auto; }
 
 // Layout
