--- a/src/styles/modules/variables.scss
+++ b/src/styles/modules/variables.scss
@@ -8,6 +8,7 @@ $text-color--accent: #9D9E9F;
 // Layout
 $background-color:#000000;
 $border-color: #434343;
+$border-color--accent: #A9A9A9;
 
 // UI events
 $success: #2AC769;
